--- a/collab-shopping/package.json
+++ b/collab-shopping/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "package.json": "^2.0.1",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12"
   },
