--- a/collab-shopping/package.json
+++ b/collab-shopping/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "axios": "^0.24.0",
     "package.json": "^2.0.1",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "vue": "^3.2.16",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue-socket.io": "^3.0.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
